[gd_scene load_steps=24 format=2]

[ext_resource path="res://Escenas/Menus/Characters_Menu_Arcade.gd" type="Script" id=1]
[ext_resource path="res://Fonts/JungleAdventurer.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Rumbaz-Demo.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Tiles/Tile_02.png" type="Texture" id=4]
[ext_resource path="res://Tiles/Tile_11.png" type="Texture" id=5]
[ext_resource path="res://Tiles/Tile_23.png" type="Texture" id=6]
[ext_resource path="res://Tiles/Tile_03.png" type="Texture" id=7]
[ext_resource path="res://Tiles/Tile_01.png" type="Texture" id=8]
[ext_resource path="res://Tiles/Tile_12.png" type="Texture" id=9]
[ext_resource path="res://Tiles/Tile_21.png" type="Texture" id=10]
[ext_resource path="res://Tiles/hyptosis_tile-art-batch-1.png" type="Texture" id=11]
[ext_resource path="res://Tiles/Tile_13.png" type="Texture" id=12]
[ext_resource path="res://Tiles/Tile_22.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Female Sprites/Girl_front_pressed.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Link Sprites/Boy_front_pressed.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Link Sprites/Boy_front.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Female Sprites/Girl_front.png" type="Texture" id=17]

[sub_resource type="TileSet" id=1]
0/name = "Tile_01.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Tile_02.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Tile_03.png 2"
2/texture = ExtResource( 7 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Tile_11.png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Tile_12.png 4"
4/texture = ExtResource( 9 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Tile_13.png 5"
5/texture = ExtResource( 12 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Tile_21.png 6"
6/texture = ExtResource( 10 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Tile_22.png 7"
7/texture = ExtResource( 13 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Tile_23.png 8"
8/texture = ExtResource( 6 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0

[sub_resource type="TileSet" id=5]
0/name = "hyptosis_tile-art-batch-1.png 0"
0/texture = ExtResource( 11 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 384, 928, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="DynamicFont" id=2]
size = 55
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 38
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 39
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 36
font_data = ExtResource( 3 )

[node name="Characters_Menu_Arcade" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1023.0
margin_bottom = 598.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 1023.0
margin_bottom = 598.0
color = Color( 0, 0, 0, 1 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 1.5, 1.5 )
tile_set = SubResource( 1 )
cell_size = Vector2( 31, 31 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 2, 0, 65536, 3, 0, 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65544, 4, 0, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 4, 0, 65551, 4, 0, 65552, 4, 0, 65553, 4, 0, 65554, 4, 0, 65555, 4, 0, 65556, 4, 0, 65557, 5, 0, 131072, 3, 0, 131073, 4, 0, 131074, 4, 0, 131075, 4, 0, 131090, 4, 0, 131091, 4, 0, 131092, 4, 0, 131093, 5, 0, 196608, 3, 0, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196626, 4, 0, 196627, 4, 0, 196628, 4, 0, 196629, 5, 0, 262144, 3, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262162, 4, 0, 262163, 4, 0, 262164, 4, 0, 262165, 5, 0, 327680, 3, 0, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327698, 4, 0, 327699, 4, 0, 327700, 4, 0, 327701, 5, 0, 393216, 3, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393234, 4, 0, 393235, 4, 0, 393236, 4, 0, 393237, 5, 0, 458752, 3, 0, 458753, 4, 0, 458754, 4, 0, 458755, 4, 0, 458770, 4, 0, 458771, 4, 0, 458772, 4, 0, 458773, 5, 0, 524288, 3, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524306, 4, 0, 524307, 4, 0, 524308, 4, 0, 524309, 5, 0, 589824, 3, 0, 589825, 4, 0, 589826, 4, 0, 589827, 4, 0, 589842, 4, 0, 589843, 4, 0, 589844, 4, 0, 589845, 5, 0, 655360, 3, 0, 655361, 4, 0, 655362, 4, 0, 655363, 4, 0, 655378, 4, 0, 655379, 4, 0, 655380, 4, 0, 655381, 5, 0, 720896, 3, 0, 720897, 4, 0, 720898, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 4, 0, 720902, 4, 0, 720903, 4, 0, 720904, 4, 0, 720905, 4, 0, 720906, 4, 0, 720907, 4, 0, 720908, 4, 0, 720909, 4, 0, 720910, 4, 0, 720911, 4, 0, 720912, 4, 0, 720913, 4, 0, 720914, 4, 0, 720915, 4, 0, 720916, 4, 0, 720917, 5, 0, 786432, 6, 0, 786433, 7, 0, 786434, 7, 0, 786435, 7, 0, 786436, 7, 0, 786437, 7, 0, 786438, 7, 0, 786439, 7, 0, 786440, 7, 0, 786441, 7, 0, 786442, 7, 0, 786443, 7, 0, 786444, 7, 0, 786445, 7, 0, 786446, 7, 0, 786447, 7, 0, 786448, 7, 0, 786449, 7, 0, 786450, 7, 0, 786451, 7, 0, 786452, 7, 0, 786453, 8, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 0, 0, 196613, 0, 0, 196634, 0, 0, 262149, 0, 0, 262170, 0, 0, 327685, 0, 0, 327706, 0, 0, 393221, 0, 0, 393242, 0, 0, 458757, 0, 0, 458778, 0, 0, 524293, 0, 0, 524314, 0, 0, 589829, 0, 0, 589850, 0, 0, 655365, 0, 0, 655386, 0, 0, 720901, 0, 0, 720922, 0, 0, 786437, 0, 0, 786458, 0, 0, 851973, 0, 0, 851994, 0, 0, 917509, 0, 0, 917530, 0, 0, 983045, 0, 0, 983066, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0 )

[node name="Personaje" type="Label" parent="."]
margin_left = 280.0
margin_top = 106.0
margin_right = 758.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 2 )
text = "Selecciona Personaje"

[node name="Regresar" type="Button" parent="."]
margin_left = 214.0
margin_top = 458.0
margin_right = 397.0
margin_bottom = 510.0
rect_pivot_offset = Vector2( -761, -229 )
custom_colors/font_color_focus = Color( 0.603922, 0.231373, 0.231373, 1 )
custom_colors/font_color_hover = Color( 0.603922, 0.231373, 0.231373, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Regresar"
flat = true

[node name="Aceptar" type="Button" parent="."]
margin_left = 651.0
margin_top = 462.0
margin_right = 810.0
margin_bottom = 506.0
custom_fonts/font = SubResource( 6 )
text = "Aceptar"
flat = true

[node name="Control" type="Control" parent="."]
margin_left = 271.0
margin_top = 200.0
margin_right = 765.0
margin_bottom = 400.0

[node name="Boy Player" type="TextureButton" parent="Control"]
anchor_left = 0.667
anchor_top = 0.5
anchor_right = 0.667
anchor_bottom = 0.5
margin_left = 41.502
margin_top = -142.0
margin_right = 171.502
margin_bottom = 156.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 15 )
expand = true

[node name="Girl Player" type="TextureButton" parent="Control"]
anchor_left = 0.667
anchor_top = 0.5
anchor_right = 0.667
anchor_bottom = 0.5
margin_left = -343.498
margin_top = -129.0
margin_right = -210.498
margin_bottom = 147.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 14 )
expand = true

[node name="Advertencia" type="Label" parent="."]
margin_left = 395.0
margin_top = 293.0
margin_right = 639.0
margin_bottom = 329.0
custom_fonts/font = SubResource( 7 )
text = "Selecciona uno!"

[connection signal="ready" from="." to="." method="_on_Characters_Menu_Arcade_ready"]
[connection signal="pressed" from="Regresar" to="." method="_on_Regresar_pressed"]
[connection signal="pressed" from="Aceptar" to="." method="_on_Aceptar_pressed"]
[connection signal="pressed" from="Control/Boy Player" to="." method="_on_Boy_Player_pressed"]
[connection signal="toggled" from="Control/Boy Player" to="." method="_on_Boy_Player_toggled"]
[connection signal="pressed" from="Control/Girl Player" to="." method="_on_Girl_Player_pressed"]
